Links to CSV files added

--- a/docs/notebooks/cpe/cpe.ipynb
+++ b/docs/notebooks/cpe/cpe.ipynb
@@ -472,6 +472,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "93f11ea7-2207-4082-8cba-6ad1e3defd4a",
+   "metadata": {},
+   "source": [
+    "CSV file is available in GitHub repository [here](https://github.com/LimberDuck/limberduck.org/blob/master/docs/notebooks/cpe/cpe-number-of-new-entries.csv)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "2ae932f3-8efb-488f-b622-258f17610704",
